--- a/themes/apollo/sass/main.scss
+++ b/themes/apollo/sass/main.scss
@@ -21,7 +21,7 @@
   --border-color: var(--border-color);
 
   /* Fonts */
-  --font-size-base: 18px;
+  --font-size-base: 14px;
   --mono-text-font: "Jetbrains Mono";
   // Font variables - these will be overridden by the template based on config
   --text-font: "Lora", Georgia, serif;
@@ -40,7 +40,7 @@ html {
   overflow-y: scroll; // solves the annoying scrollbar issue
   
   // Simplified responsive font scaling without jumps
-  font-size: clamp(16px, 1.2rem + 0.4vw, 20px);
+  font-size: clamp(var(--font-size-base), calc(var(--font-size-base) * 0.8 + 0.4vw), calc(var(--font-size-base) * 1.1));
 }
 
 body {
