--- a/themes/apollo/templates/research.html
+++ b/themes/apollo/templates/research.html
@@ -134,7 +134,7 @@
                 {% set selected_pubs = publications_data.publications | filter(attribute="selected") | sort(attribute="year") | reverse %}
                 {% if selected_pubs %}
                     <div class="section">
-                        <h2 class="section-header">selected</h2>
+                        <h2 class="section-header">Selected</h2>
                         {% for pub in selected_pubs %}
                             {{ self::render_pub(pub=pub, publications_data=publications_data, selected=true) }}
                         {% endfor %}
@@ -143,7 +143,7 @@
                 
                 <!-- Rest Section -->
                 <div class="section">
-                    <h2 class="section-header">rest</h2>
+                    <h2 class="section-header">Rest</h2>
                     {% for pub in publications_data.publications | sort(attribute="year") | reverse %}
                         {% if not pub.selected %}
                             {{ self::render_pub(pub=pub, publications_data=publications_data, selected=false) }}
